--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     },
     {
       "source": "/campeonato",
-      "destination": "/campeonato.html"
+      "destination": "/camp.html"
     },
     {
       "source": "/admin",
