--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "18.x"
   },
   "dependencies": {
-    "firebase-admin": "^12.2.0"
+    "firebase-admin": "^12.2.0",
+    "node-fetch": "^3.3.2"
   }
 }
